-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22, 23
-
Component/s: hotspot
-
b09
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8330779 | 22.0.2 | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8329158 | 21.0.4-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8326217 | 21.0.3 | Evgeny Astigeevich | P4 | Resolved | Fixed | b04 |
According to the latest “ABI for the Arm 64-bit Architecture with SVE support”: https://github.com/ARM-software/abi-aa/blob/main/aapcs64/aapcs64.rst
"Registers v8-v15 must be preserved by a callee across subroutine calls; the remaining registers (v0-v7, v16-v31) do not need to be preserved (or should be preserved by the caller)."
- backported by
-
JDK-8326217 AArch64: crypto pmull based CRC32/CRC32C intrinsics clobber V8-V15 registers
-
- Resolved
-
-
JDK-8329158 AArch64: crypto pmull based CRC32/CRC32C intrinsics clobber V8-V15 registers
-
- Resolved
-
-
JDK-8330779 AArch64: crypto pmull based CRC32/CRC32C intrinsics clobber V8-V15 registers
-
- Resolved
-
- relates to
-
JDK-8302113 Improve CRC32 intrinsic with crypto pmull on AArch64
-
- Resolved
-
-
JDK-8302783 Improve CRC32C intrinsic with crypto pmull on AArch64
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/a9792a84
-
Commit
openjdk/jdk22u/52b43e99
-
Commit
openjdk/jdk/4cd31875
-
Review
openjdk/jdk21u-dev/246
-
Review
openjdk/jdk21u/436
-
Review
openjdk/jdk22u/138
-
Review
openjdk/jdk/17701